--- a/apps/alacritty/alacritty.toml
+++ b/apps/alacritty/alacritty.toml
@@ -3,10 +3,15 @@
 
 [window]
 
-opacity = 0.99
+opacity = 0.95
 
-padding.x = 5
-padding.y = 5
+padding.x = 7
+padding.y = 7
 
+[font]
 
+normal = { family = "MesloLGSDZ Nerd Font", style = "Regular" }
+bold = { family = "MesloLGSDZ Nerd Font", style = "Bold" }
+italic = { family = "MesloLGSDZ Nerd Font", style = "Italic" }
+bold_italic = { family = "MesloLGSDZ Nerd Font", style = "Bold Italic" }
 
